--- a/aol/.env
+++ b/aol/.env
@@ -21,12 +21,21 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+#locals
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=lautan
+# DB_USERNAME=root
+# DB_PASSWORD=
+
+#aiven
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_HOST=lautans-oceanis.i.aivencloud.com
+DB_PORT=28055
 DB_DATABASE=lautan
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=avnadmin
+DB_PASSWORD=AVNS_epvFF5hj_MmwEEgPYDV
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
