--- a/aol/package.json
+++ b/aol/package.json
@@ -2,7 +2,7 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "npm run dev",
+        "build": "vite build",
         "dev": "vite"
     },
     "devDependencies": {
