--- a/aol/vercel.json
+++ b/aol/vercel.json
@@ -7,6 +7,10 @@
     },
     "routes": [
         {
+            "src": "/build/(.*)",
+            "dest": "/build/$1"
+        },
+        {
             "src": "/img/(.*)",
             "dest": "/public/img/"
         },
