--- a/aol/vercel.json
+++ b/aol/vercel.json
@@ -11,6 +11,10 @@
             "dest": "/build/$1"
         },
         {
+            "src": "/(.*\\.(?:css|js|png|jpg|jpeg|gif|svg|ico|ttf|woff|woff2|eot|otf|webp|avif|txt))$",
+            "dest": "/public/$1"
+        },
+        {
             "src": "/img/(.*)",
             "dest": "/public/img/"
         },
