--- a/aol/package.json
+++ b/aol/package.json
@@ -2,8 +2,8 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "vite build",
-        "dev": "vite"
+        "prebuild": "chmod +x node_modules/.bin/vite",
+        "build": "vite build"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
@@ -14,6 +14,6 @@
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
-        "vite": "^5.0"
+        "vite": "^5.4.11"
     }
 }
