--- a/aol/package.json
+++ b/aol/package.json
@@ -2,6 +2,7 @@
     "private": true,
     "type": "module",
     "scripts": {
+        "dev": "vite",
         "prebuild": "chmod +x node_modules/.bin/vite",
         "build": "vite build"
     },
@@ -14,6 +15,6 @@
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
-        "vite": "^5.4.11"
+        "vite": "^5.0"
     }
 }
