--- a/aol/vercel.json
+++ b/aol/vercel.json
@@ -19,6 +19,10 @@
             "dest": "/public/img/"
         },
         {
+            "src": "/storage/(.*)",
+            "dest": "/public/storage/$1"
+          },
+        {
             "src": "/(.*)",
             "dest": "/api/index.php"
         }
