--- a/aol/.env
+++ b/aol/.env
@@ -66,5 +66,9 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=
+AWS_BUCKET= 
 
 VITE_APP_NAME="${APP_NAME}"
