commit fab, jensen, dave
fab = homepage, profile
jensen = dsahbord admin, user, allreports
dave = mmpercantik about us an ddeatils
nicho = midtrans n cantikin

--- a/aol/.env
+++ b/aol/.env
@@ -69,6 +69,12 @@ MAIL_FROM_NAME="${APP_NAME}"
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=
-AWS_BUCKET= oceanis
+AWS_BUCKET=
 
 VITE_APP_NAME="${APP_NAME}"
+
+MIDTRANS_SERVER_KEY = 'SB-Mid-server-iMF0yT8hiufT77n4JMk66Aee'
+MIDTRANS_CLIENT_KEY = 'SB-Mid-client-jpNd6mD5hIAGZOiO'
+MIDTRANS_IS_PRODUCTION = false
+MIDTRANS_IS_SANITIZED = true
+MIDTRANS_IS_3DS = true
