--- a/aol/composer.json
+++ b/aol/composer.json
@@ -9,6 +9,7 @@
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "league/flysystem-aws-s3-v3": "^3.29",
+        "midtrans/midtrans-php": "^2.6",
         "yaza/laravel-google-drive-storage": "^3.0"
     },
     "require-dev": {
