--- a/aol/.env
+++ b/aol/.env
@@ -69,7 +69,7 @@ MAIL_FROM_NAME="${APP_NAME}"
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=
-AWS_BUCKET=
+AWS_BUCKET= oceanis
 
 VITE_APP_NAME="${APP_NAME}"
 
